--- a/timer.html
+++ b/timer.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <audio id="beep-sound" src="beep.mp3" preload="auto"></audio>
+    <audio id="beep-sound" src="beep.mp3"></audio>
 
     <script src="script.js"></script>
 </body>
