--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <audio id="beep-sound" src="beep.mp3"></audio>
+    <audio id="beep-sound" src="beep.MP3"></audio>
 
     <script src="script.js"></script>
 </body>
